<resources>
    <string name="app_name">YTS</string>
    <string name="cover_image">Cover image</string>
    <string name="label_movie_detail">{title}</string>
    <string name="plot_summary">Plot summary</string>
    <string name="search_hint">Search movies</string>
    <string name="suggested_movies">Suggested movies</string>
    <string name="similar_movies">Similar movies</string>
    <string name="new_movies">New movies</string>
    <string name="top_cast">Top cast</string>
    <string name="movie_detail">Movie detail</string>
    <string name="more_movies">More movies</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="theme">Theme</string>
    <string name="sort">Sort</string>
    <string name="sort_by">Sort by</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="rating">Rating</string>
    <string name="peers">Peers</string>
    <string name="seeds">Seeds</string>
    <string name="download_count">Download count</string>
    <string name="like_count">Like count</string>
    <string name="date_added">Date added</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="order_by">Order by</string>
    <string name="search">Search</string>
    <string name="screenshot">Screenshot</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="tech_specs">Tech specs</string>
    <string name="save">Save</string>
    <string name="no_movie_found">No movie found</string>
    <string name="error_loading_image">Error loading image</string>
    <string name="download_subtitle">Download subtitle</string>
    <string name="background_image">Background image</string>
    <string name="navigate_up">Navigate up</string>
    <string name="download_torrent">Download torrent</string>
</resources>