<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:padding="@dimen/dimen_normal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:textStyle="bold"
            android:textSize="@dimen/text_size_large"
            android:padding="@dimen/dimen_large"
            android:text="@string/sort_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_title"
                    android:text="@string/title"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_year"
                    android:text="@string/year"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"/>

            </LinearLayout>

            <LinearLayout
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_peers"
                    android:text="@string/peers"
                    android:onClick="onRadioButtonClicked"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_seeds"
                    android:text="@string/seeds"
                    android:onClick="onRadioButtonClicked"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_like_count"
                    android:text="@string/like_count"
                    android:onClick="onRadioButtonClicked"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_download_count"
                    android:text="@string/download_count"
                    android:onClick="onRadioButtonClicked"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_rating"
                    android:text="@string/rating"
                    android:onClick="onRadioButtonClicked"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_date_added"
                    android:text="@string/date_added"
                    android:onClick="onRadioButtonClicked"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </RadioGroup>

        <com.google.android.material.textview.MaterialTextView
            android:textStyle="bold"
            android:textSize="@dimen/text_size_large"
            android:padding="@dimen/dimen_large"
            android:text="@string/order_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_desc"
                android:text="@string/descending"
                android:onClick="onRadioButtonClicked"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_asc"
                android:text="@string/ascending"
                android:onClick="onRadioButtonClicked"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

        </RadioGroup>

    </LinearLayout>
</layout>