<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:foreground="?selectableItemBackground"
    app:cardCornerRadius="2dp"
    android:layout_margin="2dp"
    app:cardUseCompatPadding="true"
    app:cardElevation="2dp"
    app:cardBackgroundColor="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:background="@color/grey"
            android:id="@+id/img_cover_small"
            android:scaleType="centerCrop"
            android:layout_width="170dp"
            android:layout_height="200dp"
            android:contentDescription="@string/cover_image" />

        <TextView
            android:maxLines="1"
            android:ellipsize="marquee"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:padding="8dp"
            android:text="@string/title"
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:text="@string/year"
            android:textColor="@color/grey"
            android:id="@+id/txt_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</android.support.v7.widget.CardView>