<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="movie"
            type="me.ako.yts.data.network.model.MovieDetail" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/layout_movie_detail"
            android:visibility="invisible"
            tools:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_title"
                    android:text="@{movie.title}"
                    android:padding="@dimen/padding_normal"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_large"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="Antman: Quantumania"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_year"
                    android:padding="@dimen/padding_normal"
                    android:textSize="@dimen/text_size_large"
                    app:layout_constraintTop_toBottomOf="@id/txt_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="2023"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_genre"
                    android:padding="@dimen/padding_normal"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_large"
                    app:layout_constraintTop_toBottomOf="@id/txt_year"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="Adventure / Animation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_img"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/img_cover"
                        app:load="@{movie.large_cover_image}"
                        tools:src="@drawable/antman"
                        android:scaleType="centerCrop"
                        android:layout_width="200dp"
                        android:layout_height="300dp"
                        android:contentDescription="@string/cover_image" />

                </androidx.cardview.widget.CardView>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_plot"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_large"
                    android:padding="@dimen/padding_normal"
                    app:layout_constraintTop_toBottomOf="@id/card_img"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/plot_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_plot_summary"
                    android:textSize="@dimen/text_size_normal"
                    android:text="@{movie.description_full}"
                    android:padding="@dimen/padding_normal"
                    app:layout_constraintTop_toBottomOf="@id/txt_plot"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="Plot ..."
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_uploaded_date"
                    android:textSize="@dimen/text_size_normal"
                    android:padding="@dimen/padding_normal"
                    app:layout_constraintTop_toBottomOf="@id/txt_plot_summary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="Uploaded: 2023-04-25 04:38:09"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_similar_movies"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_large"
                    android:padding="@dimen/padding_normal"
                    app:layout_constraintTop_toBottomOf="@id/txt_uploaded_date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/similar_movies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_movie_suggestion"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    tools:listitem="@layout/item_movie_suggestion"
                    tools:itemCount="4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_similar_movies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <ProgressBar
            android:id="@+id/progress_movie_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>